tests/negative/call_wrong_type_args_2.fc
// test: call-with-wrong-type-of-func-arguments-test
// compile-fail: true
// exit-code: 3

int write(int _);
void exit(int _);

void foo(int a, int b, (int-int) print){
    print(a * b);
    return;
}

void main(){
    (int-void) func = exit;
    int res = foo(10, 20, func);
    write(res);
    exit(0);
}
